--- a/appspec.yml
+++ b/appspec.yml
@@ -7,8 +7,8 @@ files:
 permissions:
   - object: /var/www/html/ethos-backend
     pattern: "**"
-    owner: wwww-data
-    group: wwww-data
+    owner: www-data
+    group: www-data
 hooks:
   BeforeInstall:
     - location: scripts/install_dependencies.sh
