--- a/.github/workflows/git-runner.yml
+++ b/.github/workflows/git-runner.yml
@@ -3,7 +3,7 @@ name: Build
 on:
   push:
     branches:
-      - main  # Change this to your main branch
+      - master  # Change this to your main branch
 
 jobs:
   build:
